# pubmed-rag-demo

./: .gitignore  README.md  leaderboard.md  pyproject.toml
.github/workflows/: ci.yml
contracts/: schema.json
sample_dataset/: qa_samples.jsonl  sample.csv
scripts/: update_readme.py
src/pubmed_rag_demo/: cli.py  corpus.py  eval.py  features.py  index.py  leaderboard.py  llm.py  model.py  monitor.py  predict.py  retriever.py  run_eval.py
tests/: test_corpus.py  test_eval.py  test_faithfulness.py  test_index.py  test_precision.py  test_retriever.py  test_schema.py
