[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "pubmed-rag-demo"
version = "0.0.1"
description = "Tiny PubMed RAG demo with eval harness"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Kate Martian" }]
license = { text = "MIT" }
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "typer>=0.12",
  "rich>=13.7",
  "rank-bm25>=0.2.2",
  "jsonschema>=4.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/pubmed_rag_demo"]

[tool.hatch.build.targets.sdist]
include = ["src/pubmed_rag_demo", "README.md", "pyproject.toml"]
